# VFS-QA-072026

./: .env.example  .gitignore  ACCEPTANCE_CRITERIA.md  AGENTS.md  CHANGELOG.md  DECISIONS.md  Makefile  PLANS.md  PROJECT.md  README.md  TASKS.md  docker-compose.yml  plan.md  pyproject.toml  tom-tat-ke-hoach-3-tuan.md
.claude/: settings.local.json.tmp.94516.f0166381c503
apps/annotation-tool/: AGENTS.md  README.md  TASKS.md
apps/annotation-tool/frontend/: index.html  package-lock.json  package.json
apps/annotation-tool/frontend/src/: App.jsx  TriagePanel.jsx  styles.css
apps/candidate-mining/: AGENTS.md  README.md  TASKS.md
apps/candidate-mining/src/candidate_mining/: __init__.py  bbox_video.py  cli.py  core.py  detected.py  detectors.py  person_detect.py  suspicious_clip.py  (+2 more)
configs/: README.md  labels.json
data/: README.md
data/eval/person-detection/: expected.json
data/samples/: annotation-export.sample.json  candidate-events.sample.json  candidate-manifest.sample.json  coverage-report.sample.json
docs/: 00-current-state.md  01-business-requirements.md  02-scope-and-non-goals.md  03-workflow-and-ownership.md  04-architecture.md  05-data-contracts.md  06-candidate-mining-spec.md  07-annotation-tool-spec.md  08-labeling-guideline.md  09-event-boundary-rules.md  10-validation-rules.md  11-testing-strategy.md  12-kpi-and-coverage.md  13-dataset-card-template.md  14-assumptions-blockers.md  15-security-privacy.md  16-runbook.md  17-release-checklist.md  18-codex-workflow.md  19-glossary.md  ke-hoach-3-tuan-kiem-thu-ai-camera.md
docs/superpowers/specs/: 2026-07-19-yolov8-person-detector-design.md
docs/weekly/: week-01.md  week-02.md  week-03.md
outputs/: README.md
scripts/: README.md  annotate_video.py  check_markdown_links.py  coverage_report.py  cut_suspicious_clip.py  eval_person_detector.py  fetch_eval_videos.py  fetch_person_model.py  fetch_sample_videos.py  mine_all.py  mine_from_triage.py  release.py  triage_person.py  validate_dataset.py  validate_json.py  validation_core.py
shared/: README.md
shared/schemas/: AGENTS.md  README.md  annotation-export.schema.json  candidate-manifest.schema.json  coverage-report.schema.json
tests/: README.md  test_annotation_api.py  test_annotation_service.py  test_candidate_mining.py  test_contracts.py  test_reporting_release.py  test_suspicious_clip.py  test_yolov8_detector.py
tests/fixtures/invalid/: annotation-bad-label.json  annotation-orphan.json  candidate-bad-timestamp.json  candidate-duplicate-sample-id.json
(+4 files in other folders)
